include_directories(${CMAKE_CURRENT_BINARY_DIR})

set(WIDGETS_SRCS
    qaction.cpp
    qbutton.cpp
    qbuttongroup.cpp
    qcdestyle.cpp
    qcheckbox.cpp
    qcombobox.cpp
    qcommonstyle.cpp
    qdial.cpp
    qeffects.cpp
    qframe.cpp
    qgrid.cpp
    qgroupbox.cpp
    qhbox.cpp
    qhbuttongroup.cpp
    qheader.cpp
    qhgroupbox.cpp
    qinterlacestyle.cpp
    qlabel.cpp
    qlcdnumber.cpp
    qlineedit.cpp
    qlistbox.cpp
    qlistview.cpp
    qmainwindow.cpp
    qmenubar.cpp
    qmenudata.cpp
    qmotifplusstyle.cpp
    qmotifstyle.cpp
    qmultilineedit.cpp
    qplatinumstyle.cpp
    qpopupmenu.cpp
    qprogressbar.cpp
    qpushbutton.cpp
    qradiobutton.cpp
    qrangecontrol.cpp
    qscrollbar.cpp
    qscrollview.cpp
    qsgistyle.cpp
    qslider.cpp
    qspinbox.cpp
    qsplitter.cpp
    qstatusbar.cpp
    qtabbar.cpp
    qtableview.cpp
    qtabwidget.cpp
    qtextbrowser.cpp
    qtextview.cpp
    qtoolbar.cpp
    qtoolbutton.cpp
    qtooltip.cpp
    qvalidator.cpp
    qvbox.cpp
    qvbuttongroup.cpp
    qvgroupbox.cpp
    qwhatsthis.cpp
    qwidgetstack.cpp
    qwindowsstyle.cpp
    )

set(WIDGETS_HEADERS
    qaction.h
    qbuttongroup.h
    qbutton.h
    qcdestyle.h
    qcheckbox.h
    qcombobox.h
    qcommonstyle.h
    qdial.h
    qframe.h
    qgrid.h
    qgroupbox.h
    qhbox.h
    qhbuttongroup.h
    qheader.h
    qhgroupbox.h
    qinterlacestyle.h
    qlabel.h
    qlcdnumber.h
    qlineedit.h
    qlistbox.h
    qlistview.h
    qmainwindow.h
    qmenubar.h
    qmenudata.h
    qmotifplusstyle.h
    qmotifstyle.h
    qmultilineedit.h
    qplatinumstyle.h
    qpopupmenu.h
    qprogressbar.h
    qpushbutton.h
    qradiobutton.h
    qrangecontrol.h
    qscrollbar.h
    qscrollview.h
    qsgistyle.h
    qslider.h
    qspinbox.h
    qsplitter.h
    qstatusbar.h
    qtabbar.h
    qtableview.h
    qtabwidget.h
    qtextbrowser.h
    qtextview.h
    qtoolbar.h
    qtoolbutton.h
    qtooltip.h
    qvalidator.h
    qvbox.h
    qvbuttongroup.h
    qvgroupbox.h
    qwhatsthis.h
    qwidgetstack.h
    qwindowsstyle.h
)

qt2_wrap_cpp(TARGET widgets
    SOURCES
    qeffects.cpp
    qmainwindow.cpp
    qtoolbar.cpp
    qtooltip.cpp
    qwhatsthis.cpp
)

qt2_wrap_moc(WIDGETS_SRCS
    SOURCES ${WIDGETS_HEADERS})

add_library(widgets OBJECT ${WIDGETS_SRCS} ${MOC_WIDGETS_SRCS})
add_dependencies(widgets moc_widgets)

install(FILES ${WIDGETS_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/qt2)
